Add security features with password hashing and JWT token creation
* Add security features with password hashing and JWT token creation

* Implement authentication module with user login and token generation

* Add validation for 'sub' claim in JWT payload

* Add TokenBlacklist model for managing blacklisted JWT tokens

* Refactor User model column definition for improved readability

* Refactor database session handling and update related models for consistency

* Add logout functionality with token blacklisting

* Update dependencies

* Implement refresh token functionality and enhance logout process with token blacklisting

* Enhance security measures by implementing timing attack protection in login and refining token blacklisting error handling

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,7 +10,9 @@ requires-python = ">=3.14"
 dependencies = [
     "alembic>=1.18.3",
     "asyncpg>=0.31.0",
-    "fastapi[all]>=0.128.0",
+    "fastapi[all]>=0.128.2",
+    "pwdlib>=0.3.0",
+    "pyjwt>=2.11.0",
     "uvicorn>=0.40.0",
 ]
 
@@ -20,8 +22,8 @@ build-backend = "uv_build"
 
 [dependency-groups]
 dev = [
-    "ruff>=0.14.14",
-    "ty>=0.0.14",
+    "ruff>=0.15.0",
+    "ty>=0.0.15",
 ]
 
 
