Update CI workflow name and configure Ruff settings to ignore generated migration files from alembic

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -27,6 +27,10 @@ dev = [
 ]
 
 
+[tool.ruff]
+extend-exclude = ["src/surr/alembic/versions"]
+
+
 [tool.ruff.lint]
 select = ["ALL"]
 fixable = ["ALL"]
