--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,8 +10,8 @@ requires-python = ">=3.14"
 dependencies = [
     "alembic>=1.18.3",
     "asyncpg>=0.31.0",
-    "fastapi[all]>=0.128.2",
-    "pwdlib>=0.3.0",
+    "fastapi[all]>=0.128.3",
+    "pwdlib[argon2]>=0.3.0",
     "pyjwt>=2.11.0",
     "uvicorn>=0.40.0",
 ]
@@ -22,7 +22,11 @@ build-backend = "uv_build"
 
 [dependency-groups]
 dev = [
+    "httpx>=0.28.1",
+    "pytest>=9.0.2",
+    "pytest-asyncio>=1.3.0",
     "ruff>=0.15.0",
+    "testcontainers[postgres]>=4.14.1",
     "ty>=0.0.15",
 ]
 
@@ -35,13 +39,13 @@ extend-exclude = ["src/surr/alembic/versions"]
 select = ["ALL"]
 fixable = ["ALL"]
 preview = true
-ignore = [
-    "ANN204",
-    "COM812",
-    "D",
-    "TC001",
-    "TC002",
-    "BLE001",
-    "CPY",
-    "RUF067",
-]
+ignore = ["ANN204", "COM812", "D", "TC001", "TC002", "BLE001", "CPY", "RUF067"]
+
+
+[tool.ruff.lint.per-file-ignores]
+"tests/**" = ["D", "INP001", "PLR", "S"]
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+pythonpath = "src"
+testpaths = ["tests"]
