--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,3 +62,16 @@ services:
       - livekit
     volumes:
       - ./backend/src:/app/src
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: frontend
+    restart: unless-stopped
+    ports:
+      - "5173:5173"
+    depends_on:
+      - backend
+    volumes:
+      - ./frontend/src:/app/src
